# monitor-ggal-v5

./: .gitignore  CONTEXTO_PROYECTO.md  README.md  monitor.py  monitor_stable.py  pyproject.toml  requirements.txt
docs/: refactor_audit.md
legacy/: monitor_galicia_tiempo_real_v369.py
tests/: test_baseline_static.py
