[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-galicia-refactor-v3"
version = "0.1.0"
description = "Base de refactor para monitor Galicia tiempo real v369"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.4.3",
  "requests==2.32.5",
  "matplotlib==3.10.8",
  "pyRofex==0.5.0",
  "tksheet==7.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
